# stated

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: 404.html  index.html  sitemap.xml
docs-dist/: index.html
docs-dist/assets/javascripts/: bundle.fc8c2696.min.js
docs-dist/assets/stylesheets/: main.7bf56d0a.min.css
docs-source/: index.md  installation.md
docs/assets/stylesheets/: main.7bf56d0a.min.css.map
docs/getting-started/: index.html
docs/installation/: index.html
docs/search/: search_index.json
examples/docker/: Dockerfile
examples/fastapi/: pyproject.toml
stated/: __init__.py  connection.py  finder.py  main.py  peer.py  terminal.py  utils.py
tests/: agent_8001.py  agent_8002.py  agent_8003.py  test_session.py
